[project]
name = "buzzemulation"
version = "0.1.0"
description = "A web-based Buzz! quiz game controller that allows multiple players to interact with quiz games through mobile devices"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Rodrigo Pires", email = "rpires27@protonmail.com"},
]
license = {text = "MIT"}
keywords = ["buzz", "quiz", "controller", "multiplayer", "websocket", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: System :: Hardware",
]
dependencies = [
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "pynput>=1.8.1",
]

[project.urls]
Homepage = "https://github.com/RPires27/BuzzControllerEmulator"
Repository = "https://github.com/RPires27/BuzzControllerEmulator"
Issues = "https://github.com/RPires27/BuzzControllerEmulator/issues"

[project.scripts]
buzz-controller = "main:main"
